--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
     <title>Document</title>
     <link rel=stylesheet href="./style.css">
     <script src="main.js"></script>
-    <script src="build/pdf.js"></script>
 </head>
 <body>
 
@@ -71,13 +70,8 @@
                 </div>
                 <div class="media-content">
                     <div>
-                        <button id="prev">Previous</button>
-                        <button id="next">Next</button>
-                        &nbsp; &nbsp;
-                        <span>Page: <span id="page_num"></span> / <span id="page_count"></span></span>
+                        <iframe title="pdfjs-default-viewer" src="pdfs/file.pdf"></iframe>
                     </div>
-                    <canvas id="the-canvas"></canvas>
-                    <script src="pdfjs.js"></script>
                 </div>
             </div>
         </div>
