reset botton etc.

--- a/index.html
+++ b/index.html
@@ -30,14 +30,14 @@
     <div class="content_input">
         <div class="content_box">
             <label for="file_input" class="custom_file_input">
-                <span>選擇文件</span>
+                <span>Choose file</span>
                 <input accept=".pdf" type="file" id="file_input" style="display: none;">
             </label>
         </div>
 
-        <div class="content_box url_input">
+        <div class="content_box url_input_box">
             <div class="url_box">
-                <input type="text" placeholder="Enter URL">
+                <input type="text" id="url_input" placeholder="Enter URL">
             </div>
         </div>
 
@@ -73,7 +73,7 @@
                 </div>
                 <div class="media_content">
                     <div>
-                        <iframe title="pdfjs-default-viewer" src="pdfs/file.pdf"></iframe>
+                        <iframe title="pdfjs_default_viewer"></iframe>
                     </div>
                 </div>
             </div>
