--- a/index.html
+++ b/index.html
@@ -1,3 +1,8 @@
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+<link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"></script>
+
+
 <!DOCTYPE html>
 <html lang="en">
 
@@ -6,6 +11,10 @@
     <meta name="viewport" content="width=device_width, initial_scale=1.0">
     <title>Document</title>
     <link rel=stylesheet href="./style.css">
+    <link rel="stylesheet" href="./talk.css">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="func.js"></script>
     <script src="main.js"></script>
 </head>
@@ -76,6 +85,36 @@
                         <iframe title="pdfjs_default_viewer"></iframe>
                     </div>
                 </div>
+            </div>
+        </div>
+    </div>
+
+
+    <div class="chat_window">
+        <div class="card">
+            <div class="card-header msg_head">
+                <div class="d-flex bd-highlight">
+                    <div class="img_cont">
+                        <img src="https://i.ibb.co/fSNP7Rz/icons8-chatgpt-512.png" class="rounded-circle user_img">
+                        <span class="online_icon"></span>
+                    </div>
+                    <div class="user_info">
+                        <span>ChatBot</span>
+                        <p>Ask me anything!</p>
+                    </div>
+                </div>
+            </div>
+            
+            <div id="messageFormeight" class="card-body msg_card_body">
+            </div>
+
+            <div class="card-footer">
+                <form id="messageArea" class="input-group">
+                    <input type="text" id="text" name="msg" placeholder="Type your message..." autocomplete="off" class="form-control type_msg" required/>
+                    <div class="input-group-append">
+                        <button type="submit" id="send" class="input-group-text send_btn"><i class="fas fa-location-arrow"></i></button>
+                    </div>
+                </form>
             </div>
         </div>
     </div>
