--- a/index.html
+++ b/index.html
@@ -10,13 +10,15 @@
     <meta charset="UTF_8">
     <meta name="viewport" content="width=device_width, initial_scale=1.0">
     <title>Document</title>
-    <link rel=stylesheet href="./style.css">
-    <link rel="stylesheet" href="./talk.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
+    <link rel=stylesheet href="./style.css">
+    <link rel="stylesheet" href="./talk.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="func.js"></script>
     <script src="main.js"></script>
+    <script src="talk_submit.js"></script>
+    <script src="talk_window.js"></script>
 </head>
 
 <body>
@@ -51,7 +53,7 @@
         </div>
 
         <div class="content_box submit_box">
-            <button class="submit" id="upload_button">Upload</button>
+            <button type="submit" class="input_submit" id="upload_button">Upload</button>
         </div>
 
         <div class="content_box sel">
@@ -90,12 +92,12 @@
     </div>
 
 
-    <div class="chat_window">
+    <div class="chat_window" style="width: 0; height: 150px;">
         <div class="card">
             <div class="card-header msg_head">
                 <div class="d-flex bd-highlight">
                     <div class="img_cont">
-                        <img src="https://i.ibb.co/fSNP7Rz/icons8-chatgpt-512.png" class="rounded-circle user_img">
+                        <img src="https://i.ibb.co/fSNP7Rz/icons8-chatgpt-512.png" id="chatbot-icon" class="rounded-circle user_img">
                         <span class="online_icon"></span>
                     </div>
                     <div class="user_info">
@@ -104,7 +106,7 @@
                     </div>
                 </div>
             </div>
-            
+
             <div id="messageFormeight" class="card-body msg_card_body">
             </div>
 
